test_regress/t/t_property_pexpr_unsup.out
%Error: t/t_property_pexpr_unsup.v:115:21: Concurrent assertion has no clock; provide a clocking event, a default clocking, or a clocked procedural context (IEEE 1800-2023 16.16)
                                         : ... note: In instance 't'
  115 |   assert property ((s_eventually a) implies (s_eventually a));
      |                     ^~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_property_pexpr_unsup.v:115:46: Concurrent assertion has no clock; provide a clocking event, a default clocking, or a clocked procedural context (IEEE 1800-2023 16.16)
                                         : ... note: In instance 't'
  115 |   assert property ((s_eventually a) implies (s_eventually a));
      |                                              ^~~~~~~~~~~~
%Error: t/t_property_pexpr_unsup.v:115:3: Concurrent assertion has no clock; provide a clocking event, a default clocking, or a clocked procedural context (IEEE 1800-2023 16.16)
                                        : ... note: In instance 't'
  115 |   assert property ((s_eventually a) implies (s_eventually a));
      |   ^~~~~~
%Error: t/t_property_pexpr_unsup.v:117:21: Concurrent assertion has no clock; provide a clocking event, a default clocking, or a clocked procedural context (IEEE 1800-2023 16.16)
                                         : ... note: In instance 't'
  117 |   assert property ((s_eventually a) iff (s_eventually a));
      |                     ^~~~~~~~~~~~
%Error: t/t_property_pexpr_unsup.v:117:42: Concurrent assertion has no clock; provide a clocking event, a default clocking, or a clocked procedural context (IEEE 1800-2023 16.16)
                                         : ... note: In instance 't'
  117 |   assert property ((s_eventually a) iff (s_eventually a));
      |                                          ^~~~~~~~~~~~
%Error: t/t_property_pexpr_unsup.v:117:3: Concurrent assertion has no clock; provide a clocking event, a default clocking, or a clocked procedural context (IEEE 1800-2023 16.16)
                                        : ... note: In instance 't'
  117 |   assert property ((s_eventually a) iff (s_eventually a));
      |   ^~~~~~
%Error: Exiting due to
